--- a/style.css
+++ b/style.css
@@ -1,71 +1,69 @@
-
 .header {
-    /* background-color: #a2b997; */
-    background-color: #d192a5;
-    color:  #363338;
-    padding: 0.2rem;
-    text-align: center;
+  /* background-color: #a2b997; */
+  background-color: #d192a5;
+  color: #363338;
+  padding: 0.2rem;
+  text-align: center;
 }
 
 .main-nav {
-    background-color: #f5f5f5;
-    padding: 1rem;
-    text-align: center;
-    font-family: 'Trebuchet MS';
+  background-color: #f5f5f5;
+  padding: 1rem;
+  text-align: center;
+  font-family: "Trebuchet MS";
 }
 
 .main-nav a {
-    color: #333;
-    padding: 0 1rem;
-    text-align: center;
+  color: #333;
+  padding: 0 1rem;
+  text-align: center;
 }
 
 .main-content {
-    padding: 2rem;
+  padding: 2rem;
 }
 
-body{
-    background-color: #f5f5f5;
+body {
+  background-color: #f5f5f5;
 }
 
 .image-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 
 .image-item {
-    width: calc(33.333% - 10px);
-    margin-bottom: 10px;
-    position: relative;
-    overflow: hidden;
-    float: none;
-  }
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  float: none;
+}
 
-  img{
-    height: 350px;
-  }
+img {
+  height: 350px;
+}
 
 .image-item img {
-    width: 100%;
-    height: 95%;
-    display: block;
-    top: 0;
-    left: 0;
-  }
+  width: 100%;
+  height: 95%;
+  display: block;
+  top: 0;
+  left: 0;
+}
 
 .text-container {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 1rem;
-    display: none;
-    max-height:  200px;
-    overflow-y: auto;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 1rem;
+  display: none;
+  max-height: 200px;
+  overflow-y: auto;
 }
 
 .image-item:hover .text-container {
-    display: inline-block;
+  display: inline-block;
 }
