--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
   /* background-color: #a2b997; */
   background-color: #d192a5;
   color: #363338;
-  padding: 0.2rem;
+  padding: 1.5rem;
+  font-size: xx-large;
+  color: white;
+  font-style: bold;
   text-align: center;
 }
 
@@ -10,6 +13,8 @@
   background-color: #f5f5f5;
   padding: 1rem;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "Trebuchet MS";
 }
 
